test/optimizations/remoteValueForwarding/serialization/returnsVoid.deserialize.good
returnsVoid.chpl:13: error: chpl__deserialize cannot return void
